should fix all contrast

--- a/css/packages.css
+++ b/css/packages.css
@@ -35,6 +35,7 @@ body{
 }
 #pa-page-intro{
     color:white;
+    background:#1D2123;;
     text-align:left;
     margin-left:15%;
     font-size: 25px;
